# ucu-ml-25

./: .gitignore  README.md
avrora-scraper/: README.md  package-lock.json  package.json
avrora-scraper/data/: kyiv_store_locations.csv  lviv_store_locations.csv  store_locations.csv  store_locations.json
avrora-scraper/src/: index.js
data/: README.md
map-proto/: README.md  geodata.ipynb
map-proto/geodata/harkiv/: harkiv-avrora-locations.geojson
map-proto/geodata/kyiv/: kyiv-avrora-locations.geojson  kyiv-boundary.geojson  kyiv-polygons-7.geojson  kyiv-polygons-8.geojson  kyiv-polygons-9.geojson
map-proto/geodata/lviv/: lviv-amenities-locations.geojson  lviv-avrora-locations.geojson  lviv-boundary.geojson  lviv-polygons-7.geojson  lviv-polygons-8.geojson  lviv-polygons-9.geojson  lviv-shop-locations.geojson
map-proto/geodata/odesa/: odesa-avrora-locations.geojson
osm-data/: README.md  osm-data.ipynb
osm-data/data/: lviv.csv
osm-postgis/: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
osm-postgis/data/: harkiv_candidate_hexagons_8_resolution.geojson  lviv_city_approx.geojson  negative_store_hexagons_8_resolution.geojson  odesa_candidate_hexagons_8_resolution.geojson  positive_store_hexagons_8_resolution.geojson  positive_store_points_8_resolution.geojson  store_hexagons_combined_8_resolution.geojson
osm-postgis/models/: best_tree.pkl  data.csv  lr.pkl  metadata.csv  scaler.pkl
osm-postgis/notebooks/: aurora_location_model.pkl  draft_models.ipynb  feature_construction.ipynb  feature_construction_all_ukraine.ipynb  harkiv_aurora_lr_prediction_map.html  harkiv_aurora_rf_prediction_map.html  hexagon_preparation.ipynb  lviv_aurora_lr_prediction_map.html  lviv_aurora_prediction_map.html  lviv_aurora_rf_prediction_map.html  map_visuals.ipynb  model.ipynb  odesa_aurora_lr_prediction_map.html  odesa_aurora_rf_prediction_map.html  sandbox.ipynb
osm-postgis/scripts/initdb/: create_databases.sql  create_extensions.sql
osm-postgis/scripts/sql/: query-osm.sql
