[tool.poetry]
name = "location-look-alike"
version = "0.0.1"
description = "Location look-alike"
authors = ["Roman Kryvokhyzha <kriwohizha@gmail.com>"]
keywords = ["geo", "binary-classification"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"

numpy = {version = "^2.1.2", optional = false}
pandas = {version = "^2.0.0", optional = false}
openpyxl = {version = "^3.1.5", optional = false}

matplotlib = {version = "^3.9.2", optional = false}
rootutils = {version = "^1.0.7", optional = false}
joblib = {version = "^1.3.2", optional = false}

fake-useragent = {version = "^2.0.3", optional = false}

fire = {version = "^0.6.0", optional = false}

geopandas = {version = "^1.0.1", optional = false}
shapely = {version = "2.0.6", optional = false}

psycopg2-binary = {version = "^2.9.9", optional = false}
h3 = "^4.2.2"
pyproj = "^3.7.1"
sqlalchemy = "^2.0.41"
geoalchemy2 = "^0.17.1"

[tool.poetry.dev-dependencies]
pre-commit = {version = "^4.0.0", optional = false}
notebook = {version = "^7.0.6"}
ipython = {version = "^8.20.0"}
ipywidgets = {version = "^8.1.1"}

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[tool.ruff]
# all rules can be found here: https://beta.ruff.rs/docs/rules/
select = ["E", "F", "W", "I", "D"]

# max line length for black
line-length = 120

ignore=[
    # space before : (needed for how black formats slicing)
    "E203",
    # do not assign a lambda expression, use a def
    "E731",
    # do not use variables named 'l', 'O', or 'I'
    "E741",
    # unable to detect undefined names
    "F403",
    # imported but unused
    "F401",
    # missing docstring in public module
    "D100",
    # missing docstring in public class
    "D101",
    # missing docstring in public method
    "D102",
    # missing docstring in public function
    "D103",
    # missing docstring in public package
    "D104",
    # missing docstring in magic method
    "D105",
    # missing docstring in `__init__`
    "D107",
]

exclude=[
    ".eggs",
    ".hg",
    ".mypy_cache",
    ".git",
    ".vscode",
    ".tox",
    ".venv",
    "__pycache__",
    "_build",
    "build",
    "buck-out",
    "dist",
    ".gitlab",
    "configs",
    "metastore_db*",
    "docs*",
    "tests*",
    "*.tests.*",
    "*.tests"
]

[tool.ruff.per-file-ignores]
# It's fine not to put the import at the top of the file in the scripts and templates folders.
# folder.
"scripts/*"=["E402"]

[tool.ruff.isort]
# Use a single line after each import block.
lines-after-imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
ruff = "pyproject.toml"

[tool.nbqa.addopts]
ruff = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
ruff = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
